--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>bapl | Graphic Design</title>
 		<meta name="description" content="Some inspiration for playful hover interactions on words" />
 		<meta name="keywords" content="typography, effects, interaction, hover, animation, javascript, css, web design" />
-		<meta name="author" content="Codrops" />
+		<meta name="author" content="bapl" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link href="https://fonts.googleapis.com/css?family=Nunito:400,700|Days+One" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
