--- a/accueil.html
+++ b/accueil.html
@@ -31,8 +31,6 @@
 				</div>
 				</header>
 				<nav class="menutop">
-					<a class="menutop__item">about</a>
-					<a class="menutop__item">contact</a>
 					<a class="menutop__item menutop__item--social" href="https://www.behance.net/JeremyLacour">bh</a>
 					<a class="menutop__item menutop__item--social" href="https://www.linkedin.com/in/jérémy-lacour-093961194/">ld</a>
 					<a class="menutop__item menutop__item--social" href="https://www.instagram.com/ba_pl/">ig</a>
@@ -46,7 +44,7 @@
 				</div>
 				<div class="menu__item">
 					<span class="menu__item-number">02</span>
-					<span class="menu__item-textwrap"><span class="menu__item-text">Illustration</span></span>
+					<span class="menu__item-textwrap"><span class="menu__item-text">Motion</span></span>
 					<a class="menu__item-link">explore</a>
 				</div>
 				<div class="menu__item">
@@ -91,7 +89,7 @@
 					<div class="grid grid--layout-3">
 						<a href="#" class="grid__item" style="background-image: url(img/accueil/18.jpg)"></a>
 						<a href="#" class="grid__item" style="background-image: url(img/accueil/19.jpg)"></a>
-						<a href="#" class="grid__item" style="background-image: url(img/accueil/20.jpg)"></a>
+						<a href="posters.html" class="grid__item" style="background-image: url(img/accueil/20.jpg)"></a>
 						<a href="#" class="grid__item" style="background-image: url(img/accueil/21.jpg)"></a>
 						<a href="#" class="grid__item" style="background-image: url(img/accueil/22.jpg)"></a>
 						<a href="#" class="grid__item" style="background-image: url(img/accueil/23.jpg)"></a>
@@ -101,7 +99,7 @@
 					</div>
 					<div class="grid grid--layout-4">
 						<a href="#" class="grid__item" style="background-image: url(img/accueil/25.jpg)"></a>
-						<a href="#" class="grid__item" style="background-image: url(img/accueil/26.jpg)"></a>
+						<a href="falls.html" class="grid__item" style="background-image: url(img/accueil/26.jpg)"></a>
 						<a href="#" class="grid__item" style="background-image: url(img/accueil/27.jpg)"></a>
 						<a href="#" class="grid__item" style="background-image: url(img/accueil/28.jpg)"></a>
 						<a href="#" class="grid__item" style="background-image: url(img/accueil/29.jpg)"></a>
@@ -124,19 +122,39 @@
 				</div><!-- /gridwrap -->
 				<div class="content">
 					<div class="content__item">
-						Emerged into consciousness tesseract invent the universe Cambrian explosion how far away from which we spring? Brain is the seed of intelligence white dwarf inconspicuous motes of rock and gas two ghostly white figures in coveralls and helmets are soflty dancing extraordinary claims require extraordinary evidence dispassionate extraterrestrial observer. Hundreds of thousands great turbulent clouds concept of the number one made in the interiors of collapsing stars the sky calls to us encyclopaedia galactica.
+						<p>@ : jeremylacourbox@gmail.com<br></p>
+						<p>tél. : 06 48 75 54 83<br></p>
+						<p>LinkedIn: <a href="https://www.linkedin.com/in/j%C3%A9r%C3%A9my-lacour-093961194/">Jérémy Lacour</a></p>
+						<p>Behance: <a href="https://www.behance.net/JeremyLacour">JeremyLacour</a> </p>
+						<p>Instagram: <a href="https://www.instagram.com/ba_pl/">@ba_pl</a>
 					</div>
 					<div class="content__item">
-						Billions upon billions cosmic ocean prime number descended from astronomers finite but unbounded Euclid? White dwarf hearts of the stars the carbon in our apple pies a very small stage in a vast cosmic arena brain is the seed of intelligence permanence of the stars? Vastness is bearable only through love concept of the number one Sea of Tranquility courage of our questions how far away a still more glorious dawn awaits.
+						<p>@ : jeremylacourbox@gmail.com<br></p>
+						<p>tél. : 06 48 75 54 83<br></p>
+						<p>LinkedIn: <a href="https://www.linkedin.com/in/j%C3%A9r%C3%A9my-lacour-093961194/">Jérémy Lacour</a></p>
+						<p>Behance: <a href="https://www.behance.net/JeremyLacour">JeremyLacour</a> </p>
+						<p>Instagram: <a href="https://www.instagram.com/ba_pl/">@ba_pl</a>
 					</div>
 					<div class="content__item">
-						At the edge of forever white dwarf a mote of dust suspended in a sunbeam citizens of distant epochs take root and flourish tesseract. Bits of moving fluff rings of Uranus across the centuries tendrils of gossamer clouds made in the interiors of collapsing stars muse about. A very small stage in a vast cosmic arena emerged into consciousness network of wormholes network of wormholes dispassionate extraterrestrial observer emerged into consciousness.
+						<p>@ : jeremylacourbox@gmail.com<br></p>
+						<p>tél. : 06 48 75 54 83<br></p>
+						<p>LinkedIn: <a href="https://www.linkedin.com/in/j%C3%A9r%C3%A9my-lacour-093961194/">Jérémy Lacour</a></p>
+						<p>Behance: <a href="https://www.behance.net/JeremyLacour">JeremyLacour</a> </p>
+						<p>Instagram: <a href="https://www.instagram.com/ba_pl/">@ba_pl</a>
 					</div>
 					<div class="content__item">
-						Explorations Apollonius of Perga Sea of Tranquility great turbulent clouds realm of the galaxies two ghostly white figures in coveralls and helmets are soflty dancing. Dispassionate extraterrestrial observer are creatures of the cosmos a mote of dust suspended in a sunbeam hundreds of thousands extraordinary claims require extraordinary evidence something incredible is waiting to be known. Citizens of distant epochs dispassionate extraterrestrial observer something incredible is waiting to be known of brilliant syntheses network of wormholes rich in heavy atoms.
+						<p>@ : jeremylacourbox@gmail.com<br></p>
+						<p>tél. : 06 48 75 54 83<br></p>
+						<p>LinkedIn: <a href="https://www.linkedin.com/in/j%C3%A9r%C3%A9my-lacour-093961194/">Jérémy Lacour</a></p>
+						<p>Behance: <a href="https://www.behance.net/JeremyLacour">JeremyLacour</a> </p>
+						<p>Instagram: <a href="https://www.instagram.com/ba_pl/">@ba_pl</a>
 					</div>
 					<div class="content__item">
-						Hundreds of thousands take root and flourish tingling of the spine consciousness ship of the imagination paroxysm of global death. Rich in mystery realm of the galaxies realm of the galaxies something incredible is waiting to be known hearts of the stars rich in mystery? Kindling the energy hidden in matter the carbon in our apple pies Cambrian explosion the sky calls to us encyclopaedia galactica citizens of distant epochs.
+						<p>@ : jeremylacourbox@gmail.com<br></p>
+						<p>tél. : 06 48 75 54 83<br></p>
+						<p>LinkedIn: <a href="https://www.linkedin.com/in/j%C3%A9r%C3%A9my-lacour-093961194/">Jérémy Lacour</a></p>
+						<p>Behance: <a href="https://www.behance.net/JeremyLacour">JeremyLacour</a> </p>
+						<p>Instagram: <a href="https://www.instagram.com/ba_pl/">@ba_pl</a>
 					</div>
 				</div>
 			</div><!-- /page -->
